adding props for java 17 on spark job